[package]
authors = [
  "Tom Jakubowski <tom@crystae.net>",
  "Yohaï Berreby <yohaiberreby@gmail.com>",
  "Zbigniew Siciarz <zbigniew@siciarz.net>"
]
description = "Convenience macros for constructing JSON objects from literals.\n"
keywords = ["json", "macros", "plugins", "serde", "serialization"]
license = "MIT"
name = "json_macros"
readme = "README.markdown"
repository = "https://github.com/tomjakubowski/json_macros"
version = "0.3.1"
build = "build.rs"

[features]
default = ["with-rustc-serialize"]
with-rustc-serialize = ["rustc-serialize"]
with-serde = ["serde_json"]
with-syntex = ["syntex", "syntex_syntax", "quasi/with-syntex", "quasi_codegen/with-syntex"]

[dependencies]
rustc-serialize = { version = "0.3.0", optional = true }
serde_json = { version = "0.8.0", optional = true }
syntex = { version = "0.50.0", optional = true }
syntex_syntax = { version = "0.50.0", optional = true }
quasi = { version = "0.26.0", optional = true }

[build-dependencies]
quasi_codegen = { version = "0.26.0", optional = true }

[dev-dependencies]
serde = "0.8.0"

[[example]]
name = "kitchen-sink"
path = "examples/kitchen_sink.rs"

[lib]
name = "json_macros"
path = "src/lib.rs"
plugin = true
crate-type = ["dylib", "rlib"]

[[test]]
name = "tests"
